@@ -1,3 +1,13 @@
+Tue Jul 29 09:59:35 2003  Chad Elliott  <elliott_c@ociweb.com>
+
+        * ace/UUID.cpp:
+
+          Changed the #includes to use the ace directory.
+
+        * ace/ace.mpc:
+
+          Added Metrics_Cache.cpp and UUID.cpp.
+
 Tue Jul 29 09:39:58 2003  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/config/vcpartialmacros.mpt:
